# Q-AI_ai

./: .gitignore  Dockerfile  README.md  answercheck.json  cudatest.py  main.py  pyproject.toml  requirements.txt  test.ipynb
.github/: pr_template.md
dbs/: crud.py  db.py  models.py
prompt/: feedback_prompt.py  prompt.py  question_prompt.py
schemas/: feedbackSchema.py  questSchema.py
utils/: prompt.py
